--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,6 +53,12 @@
       </div>
     </div>
   </div><!--/row-->
+  <hr />
+  <footer class="footer">
+    <p>
+      &copy;2013 湖南雅致炜锋服饰有限公司
+    </p>
+  </footer>
 </section>
 
   <!-- Javascripts
