--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -22,6 +22,12 @@
     </div>
   </div>
   <div class="control-group">
+    <%= f.label :taobao_url, class: 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :taobao_url, class: 'text_field', style: "width: 400px;" %>
+    </div>
+  </div>
+  <div class="control-group">
     <%= f.label :description, class: 'control-label' %>
     <div class="controls">
       <%= f.text_area :description, style: "width: 400px;", cols: 100, rows: 12, class: 'text-area' %>
