--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -12,7 +12,7 @@
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
     <![endif]-->
 
-    <%= stylesheet_link_tag "application", :media => "all" %>
+    <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
 
     <!-- For third-generation iPad with high-resolution Retina display: -->
     <!-- Size should be 144 x 144 pixels -->
@@ -86,7 +86,8 @@
           Developed by <%= mail_to "gonglexin@gmail.com", "@gonglexin" %>,
           follow on <%= link_to "twitter", "https://twitter.com/gonglexin" %>
                     <%= link_to "github",  "https://github.com/gonglexin" %>
-                    <%= link_to "weibo",  "http://weibo.com/gonglexin" %>
+                    <%= link_to "weibo",  "http://weibo.com/gonglexin" %>,
+          QQ: 286896969
         </p>
       </footer>
 
