--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
 <head>
   <title>湖南雅致炜锋服饰</title>
   <meta charset="utf-8">
+  <meta name="keywords" content="湖南雅致炜锋服饰有限公司,雅致炜锋,西服定制,定做职业装,定做工作服、酒店制服,男士衬衣,男士职业装,女士衬衣,女士职业装,定做职业装,定做工作服、T恤衫,文化衫,儿童T恤,工作服,保安保洁服,促销服,防静电制服,校服,医护服,运动服装,球服,武术柔道服">
+  <meta name="description" content="湖南雅致炜锋服饰有限公司,雅致炜锋,西服定制,定做职业装,定做工作服、酒店制服,男士衬衣,男士职业装,女士衬衣,女士职业装,定做职业装,定做工作服、T恤衫,文化衫,儿童T恤,工作服,保安保洁服,促销服,防静电制服,校服,医护服,运动服装,球服,武术柔道服">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
@@ -12,8 +14,6 @@
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
   <![endif]-->
-
-  <%= stylesheet_link_tag "application", :media => "all" %>
 
   <!-- For third-generation iPad with high-resolution Retina display: -->
   <!-- Size should be 144 x 144 pixels -->
