--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -7,6 +7,13 @@
       </li>
     </ul>
 <% end %>
+
+<% if @product.taobao_url %>
+  <p>
+    <%= link_to '淘宝链接', @product.taobao_url, target: '_blank' %>
+  </p>
+<% end %>
+
 <pre class="description">
 <%= @product.description %>
 </pre>
