add a taobao url pic in product, reduce the size of image file

--- a/app/views/pages/cases.html.erb
+++ b/app/views/pages/cases.html.erb
@@ -2,5 +2,5 @@
 
 <pre>
 通过多年来对全国服装市场的摸索与积累、以及对市场的全面优化与整合，人性化销售及售后服务，开创了全新的销售服务体系，现有百余家著名企、事业单位与其长期友好合作，并赢得了消费者的信任和广大客户的好评。
-<%= image_tag 'cases.png' %>
+<%= image_tag 'cases.jpg' %>
 </pre>
