--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,15 +8,15 @@
     </ul>
 <% end %>
 
-<% if @product.taobao_url %>
-  <p>
-    <%= link_to '淘宝链接', @product.taobao_url, target: '_blank' %>
-  </p>
-<% end %>
-
 <pre class="description">
 <%= @product.description %>
 </pre>
+
+<% if @product.taobao_url %>
+  <p>
+    <%= link_to image_tag('taobao.png'), @product.taobao_url, target: '_blank' %>
+  </p>
+<% end %>
 
 <div>
   <%= link_to '所有产品', products_path, class: "btn" %>
