--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -14,11 +14,11 @@
 
 <% if @product.taobao_url %>
   <p>
-    <%= link_to image_tag('taobao.png'), @product.taobao_url, target: '_blank' %>
+    <%= link_to '淘宝详情', @product.taobao_url, class: 'btn', target: '_blank' %>
   </p>
 <% end %>
 
 <div>
-  <%= link_to '所有产品', products_path, class: "btn" %>
+  <%= link_to '所有产品', products_path, class: 'btn' %>
 </div>
 
