--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,10 +1,10 @@
 <%= render 'shared/breadcrumb', title: "联系我们" %>
 
 <pre>
-销售热线: 0731-82737168 13874814662
+销售热线: 0731-89603190 89603191 89603195 89603196 13874814662
 QQ: 1138524616 QQ: 2307224232
 网址: <%= link_to 'www.yzwffs.com', 'http://www.yzwffs.com' %> <%= link_to 'yzwffs.taobao.com', 'http://yzwffs.taobao.com' %> 
 邮箱: <%= mail_to '1138524616@qq.com' %>
 
-地址: 长沙市芙蓉区远大路1398号东岸城邦16楼
+地址: 长沙市远大路1398号东岸城邦写字楼16楼
 </pre>
